# mockturtle

experiments/: cut_rewriting.cpp  mig_resubstitution.cpp
include/mockturtle/algorithms/: cleanup.hpp  mig_resyn_engines.hpp  simulation.hpp  xmg_optimization.hpp
include/mockturtle/algorithms/detail/: resub_utils.hpp
include/mockturtle/algorithms/resubstitution/: resyn_strategies.hpp  simulation_resubstitution.hpp  window_resubstitution.hpp  windowing.hpp
include/mockturtle/algorithms/resyn_engines/: mig_resyn_engines.hpp
include/mockturtle/io/: write_blif.hpp  write_dot.hpp
include/mockturtle/networks/: abstract_xag.hpp  aig.hpp  mig.hpp  xag.hpp  xmg.hpp
include/mockturtle/utils/: index_list.hpp  node_map.hpp
include/mockturtle/views/: depth_view.hpp  names_view.hpp
lib/kitty/kitty/: constructors.hpp
lib/lorina/lorina/: blif.hpp
test/: CMakeLists.txt
test/algorithms/: quality.cpp  resubstitution.cpp
test/algorithms/resyn_engines/: mig_resyn_engines.cpp
